@@ -17,6 +17,8 @@ public class Both {
 
     public static void main(String[] args) {
 
+        System.out.println("Start Publisher and Subscriber");
+
         DomainParticipantFactory dpf =
             TheParticipantFactory.WithArgs(new StringSeqHolder(args));
         if (dpf == null) {
@@ -166,9 +168,13 @@ public class Both {
             return;
         }
 
+        System.out.println("Stop Publisher and Subscriber");
+
         // Clean up
         dp.delete_contained_entities();
         dpf.delete_participant(dp);
         TheServiceParticipant.shutdown();
+
+        System.out.println("Publisher and Subscriber exiting");
     }
 }
